tests/baselines/reference/TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.errors.txt
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(2,18): error TS2300: Duplicate identifier 'Point'.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(10,18): error TS2300: Duplicate identifier 'Point'.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(16,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(16,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(16,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(17,18): error TS2300: Duplicate identifier 'Line'.
TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts(26,26): error TS2300: Duplicate identifier 'Line'.


==== TwoInternalModulesThatMergeEachWithExportedClassesOfTheSameName.ts (7 errors) ====
    namespace A {
        export class Point {
                     ~~~~~
!!! error TS2300: Duplicate identifier 'Point'.
            x: number;
            y: number;
        }
    }
    
    namespace A{
        // expected error
        export class Point {
                     ~~~~~
!!! error TS2300: Duplicate identifier 'Point'.
            origin: number;
            angle: number;
        }
    }
    
    module X.Y.Z {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
               ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class Line {
                     ~~~~
!!! error TS2300: Duplicate identifier 'Line'.
            length: number;
        }
    }
    
    namespace X {
        export namespace Y {
            export namespace Z {
                // expected error
                export class Line {
                             ~~~~
!!! error TS2300: Duplicate identifier 'Line'.
                    name: string;
                }
            }
        }
    }
    